--- a/faq-accordion-card/style/style.css
+++ b/faq-accordion-card/style/style.css
@@ -13,26 +13,30 @@
   --dark-grayish-blue: hsl(240, 6%, 50%);
 }
 
-html {
-  width: 100%;
-  height: 100%;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
+  max-width: 100%;
+  height: 100%;
   background: var(--soft-violet);
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family: "Kumbh Sans", sans-serif;
 }
 
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .grid-container {
@@ -76,6 +80,10 @@ body {
 .faq-content .questions dt::after {
   content: url("../faq-accordion-card-main/images/icon-arrow-down.svg");
   transition: ease 1s;
+}
+
+.faq-content .questions dt.active {
+  color: var(--soft-red);
 }
 
 .faq-content .questions dt.active::after {
