--- a/base-apparel-coming-soon-page/style/style.css
+++ b/base-apparel-coming-soon-page/style/style.css
@@ -41,11 +41,12 @@ img {
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 150px  1fr;
 }
 
 .image {
   grid-column: 2;
-  grid-row: 1 / 3;
+  grid-row: 1 / 4;
   overflow: hidden;
 }
 
@@ -59,11 +60,65 @@ img {
   margin: 60px 90px 90px 60px;
 }
 
-header,
-.content {
+header {
   grid-column: 1;
+  grid-row: 1 / 2;
 }
 
-.content {
-    grid-row: 2 / 3;
+.content .text,
+.content .button {
+  grid-row: 2 / 3;
+}
+
+.content span.detail {
+  color: var(--desaturated-red);
+  font-weight: 300;
+}
+
+.content h1.title {
+  color: var(--dark-grayish-red);
+  font-size: 4.2rem;
+  font-weight: 600;
+  letter-spacing: .5rem;
+  text-transform: uppercase;
+}
+
+.content p.paragraph {
+  max-width: 500px;
+  width: 100%;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: var(--desaturated-red);
+  margin-top: 30px;
+}
+
+.content .button {
+  position: relative;
+}
+
+.content .button input#email,
+.content .button button#email {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1rem;
+  margin-top: 30px;
+}
+
+.content .button input#email {
+  max-width: 500px;
+  width: 100%;
+  height: 60px;
+  border-radius: 30px;
+  border: 1px solid var(--desaturated-red);
+  padding-left: 30px;
+}
+
+.content .button button#email {
+  max-width: 200px;
+  width: 100px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: var(--soft-red);
+  border: none;
+  position: absolute;
+  right: 0;
 }
